# bege

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md
addons/bege/: .gitignore  README.md  bege.gdextension
addons/bege/licenses/: godot-cpp.lic
docs/: vendors-licenses-en.md
examples/: .gitignore  icon.svg.import  project.godot
examples/scenes/: init.tscn
examples/scenes/examples/: example-bege_console.tscn
examples/sources/gd/: example_bege_console.gd  example_bege_console.gd.uid  init_scene.gd  init_scene.gd.uid
sources/inc/bege/: base.hh  bege.hh  godot.hh
sources/inc/bege/functions/: date_and_time.hh
sources/inc/bege/objects/: bege_console.hh
sources/src/: bege.cc
sources/src/functions/: date_and_time.cc
sources/src/objects/: bege_console.cc
sources/xml/objects/: bege_console.xml
src/inc/bege/: export_shared.hh  export_static.hh
templates/xml/: godot_object_doc.xml
